tests/fixtures/invalid/min_str_set.py
# Cannot call min() with Str, Set[int]
x = min("hello", {1, 2, 3})
